--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,77 +1,85 @@
-.container{
+body {
     width: 1200px;
     height: 800px;
+    font-family: 'Righteous', cursive;
+    margin: 20px auto;
+
+}
+
+.container{
+    
+    width: 100%;
+    height: 100%;
     background-image: url("../images/yankee-stadium.jpg") ;
-    margin: 50px auto;
+    margin: 25px;
     background-size: 100% 100%;
    
 }
 
-.triviaImage{
-    position: relative;
-    height: 200px;
-    width: 300px;
-    top: 251px;
-    
-}
 
-#questionBlock{
-    position: absolute;
-    top: 324px;
-    left: 503px;
+#questionBlock {
+    position: relative;
+    margin-top: 2%;
+    margin-left: 21%;
     background-color: transparent;
-    width: 571px;
-    height: 140px;
-    font-size: 40px;
+    width: 30%;
+    height: 28%;
+    font-size: 30px;
+    font-family: 'Righteous', cursive;
     text-align: center;
     color: rgb(25, 83, 207);
     font-weight: bolder;
-    padding-top: 35px;
 }
 
-#answerSelections{
-    width: 331px;
-    height: 250px;
-    position: absolute;
-    top: 249px;
-    left: 1083px;
+
+#answerSelections {
+    position: relative;
+    margin-top: 6%;
+    margin-left: 63%;
     background-color: transparent;
-    opacity: .5;
-    color: white;
-    margin: 0px auto;
-
+    width: 18%;
+    height: 25%;
+    font-size: 20px;
+    font-family: 'Righteous', cursive;
+    text-align: center;
+    color: rgb(25, 83, 207);
+    font-weight: bolder;
 }
 
-
-
-
-.answerOptions{
+.answerOptions {
     position: relative;
     width: 80%;
-    height: 45px;
+    height: 20%;
+    color: white;
+    font-size: 15px;
+    font-family: 'Righteous', cursive;
+    background-color: navy;
+    box-shadow: 5px 5px;
+    margin: 8px auto;
+    margin-left: 20%;
+    margin-top: 8%;
+    top: -40%;
+}
+
+#btnStart {
+    position: relative;
+    width: 80%;
+    height: 20%;
     color: white;
     font-weight: bolder;
     font-size: 15px;
+    font-family: 'Righteous', cursive;
     background-color: navy;
-    box-shadow: 5px 5px; 
+    box-shadow: 5px 5px;
     margin: 8px auto;
-    left: 30px;
-    top: -2px;
-
-
+    margin-left: 19%;
+    margin-top: 8%;
+    top: 10%;
 }
 
 
 
-
-@media only screen and (max-width: 640px) {
     
-    .container{
-        width: 600px;
-        height: 400px;
-        background-color: blue;
-        margin: 50px auto;
-        background-size: 100% 100%;
-    }
 
-}
+
+
